--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/frameshft/stas-test/issues"
   },
-  "homepage": "https://github.com/frameshft/stas-test#readme"
+  "homepage": "https://github.com/frameshft/stas-test#readme",
+  "dependencies": {
+    "eslint-plugin-vue": "^6.2.2"
+  }
 }
