--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "url": "https://github.com/frameshft/stas-test/issues"
   },
   "homepage": "https://github.com/frameshft/stas-test#readme",
-  "dependencies": {
-    "eslint-plugin-vue": "^6.2.2"
+  "dependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^2.0.5"
   }
 }
